style: inspect code